--- a/package.json
+++ b/package.json
@@ -16,6 +16,22 @@
       {
         "command": "git-better.helloWorld",
         "title": "Hello World"
+      },
+      {
+        "command": "git-better.openWebview",
+        "title": "Open Git Better Webview"
+      },
+      {
+        "command": "git-better.button1",
+        "title": "Button 1"
+      },
+      {
+        "command": "git-better.button2",
+        "title": "Button 2"
+      },
+      {
+        "command": "buttonView.refresh",
+        "title": "Refresh Button View"
       }
     ],
     "viewsContainers": {
@@ -30,10 +46,8 @@
     "views": {
       "pullRequestExplorer": [
         {
-          "id": "gitBetter",
-          "name": "Git Better",
-          "icon": "media/pricon.svg",
-          "contextualTitle": "Pull Request Explorer"
+          "id": "buttonView",
+          "name": "Git Better Buttons"
         }
       ]
     }
