--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "engines": {
     "vscode": "^1.96.0"
   },
+  "type": "commonjs",
   "categories": [
     "Other"
   ],
   "extensionDependencies": [
-  "vscode.git"
+    "vscode.git"
   ],
   "activationEvents": [],
   "main": "./out/extension.js",
@@ -63,6 +64,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "octokit": "^4.1.0"
   }
 }
