--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@octokit/core": "^6.1.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2"
+  },
+  "devDependencies": {
+    "@types/vscode": "^1.96.0"
   }
 }
